# uncertainty-datatypes-python

./: README.md  UserGuide.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: UserGuide.md
examples/: BasicExamples.py  BasicOpsPerformance-uncertainties.py  BasicOpsPerformance.py  Incubator-uncertainties.py  Incubator.py  IncubatorPerformance-uncertainties.py  IncubatorPerformance.py  example1-smart_house.py  example2-incubator.py
src/uncertainty/: afuncs.py  anumbers.py  result.py  sbool.py  ubool.py  uenum.py  unumbers.py  ustr.py  utypes.py
test/: funcs_testing.py  test_abool.py  test_afloat.py  test_aint.py  test_files.py  test_sbool.py  test_ubool.py  test_uenum.py  test_ufloat.py  test_uint.py  test_ustr.py
test/test-files/: uboolTests.in  ufloatTests.in  uintTests.in
uDataTypes/Libraries/python/: LICENSE  README.md  TypeA-implementations.md  UserGuide.md  pyproject.toml
uDataTypes/Libraries/python/test/: funcs_testing.py  pruebas.py  test_abool.py  test_afloat.py  test_aint.py  test_sbool.py  test_ubool.py  test_uenum.py  test_ufloat.py  test_uint.py  test_ustr.py
uDataTypes/Libraries/python/udatatypes/: ubool.py  unumbers.py  utypes.py
uDataTypes/Libraries/python/uncertainty/: abool.py  afuncs.py  result.py  sbool.py  ubool.py  uenum.py  unumbers.py  ustr.py  utypes.py
